vectors for meshes

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         Total Height: <span id="heightValue">0.00</span>
         <input type="range" id="totalHeight" min="0" max="2" step="0.01" value="0" />
       </label>
+      <br />
+      <button id="printButton">Print</button>
     </div>
 
     <canvas id="webgl"></canvas>
